added swagger for sign-in & sign-up
